--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ html, body {overflow-x: scroll;}
   display: flex;
   justify-content: space-between;
   width: 50%;
-  margin-left: auto;
+  margin: auto;
 }
 
 .social-links a {
