--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ html, body {overflow-x: scroll;}
   .mdl-card { 
     margin-top: 20px;  
     margin-bottom: 20px;
-    min-width: 550;
+    min-width: 850;
   }
   
 }
@@ -293,7 +293,17 @@ background-size: cover;
 
 
 }
+.mdl-card__title_ntt{
+  background-image: url('./components/journal.png');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-position: center top;
+-moz-background-size: cover;
+-webkit-background-size: cover;
+background-size: cover; 
 
+
+}
 }
 .mdl-progress {
 
