--- a/src/App.css
+++ b/src/App.css
@@ -220,9 +220,11 @@ html, body {overflow-x: scroll;}
   
 }
 .mdl-card__title_ntt{
-  background-image: url('./components/journal.png');
+  
+  background-image: url('https://static.wixstatic.com/media/2c7225_9988141184b24f2fa585022fa0c0f564~mv2.jpg/v1/fill/w_768,h_504,al_c,lg_1,q_90/2c7225_9988141184b24f2fa585022fa0c0f564~mv2.webp');
   background-repeat: no-repeat;
-  background-position: 0 0;
+ 
+  
   background-position: center top;
 -moz-background-size: cover;
 -webkit-background-size: cover;
@@ -294,7 +296,7 @@ background-size: cover;
 
 }
 .mdl-card__title_ntt{
-  background-image: url('./components/journal.png');
+  background-image: url('https://static.wixstatic.com/media/2c7225_9988141184b24f2fa585022fa0c0f564~mv2.jpg/v1/fill/w_768,h_504,al_c,lg_1,q_90/2c7225_9988141184b24f2fa585022fa0c0f564~mv2.webp');
   background-repeat: no-repeat;
   background-position: 0 0;
   background-position: center top;
