--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,7 @@ background-size: cover;
 }
 .mdl-card__title_ntt{
   background-image: url('./components/journalll.jpeg');
-  max-width: 100%;
+  margin-top: 0px !important;
 height: auto;
   background-repeat: no-repeat;
  
